--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bio-data</title>
+  <title>Bio-data - Deepthi AS</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,10 +16,12 @@
   </header>
 
   <section id="bio">
-    <p><strong>Name:</strong> Deepthi AS</p>
+    <p><strong>Name:</strong> Deepthi A S</p>
     <p><strong>Date of Birth:</strong> 16-May-2005</p>
     <p><strong>Gender:</strong> Female</p>
     <p><strong>Nationality:</strong> Indian</p>
+    <p><strong>Marital Status:</strong> Single</p>
+    <p><strong>Languages Known:</strong> English, Kannada, Hindi</p>
     <p><strong>Hobbies:</strong> Coding, Reading, Traveling</p>
   </section>
 
